changed setSelect reducer

--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,9 @@ p.focus {
   width: 100%;
   padding: 10px;
 }
-textarea {
+.textarea {
   width: 100%;
+  background-color: white;
   height: 500px;
   border: none;
   outline: none;
@@ -45,4 +46,25 @@ textarea {
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   padding: 30px 40px;
+}
+
+b {
+  font-weight: 700;
+  font-size: inherit;
+}
+i {
+  font-size: inherit;
+}
+u {
+  font-size: inherit;
+}
+strike {
+  font-size: inherit;
+}
+li {
+  font-size: inherit;
+}
+blockquote {
+  font-size: inherit;
+  font-family: inherit;
 }
